--- a/images/server/Dockerfile
+++ b/images/server/Dockerfile
@@ -1,3 +1,3 @@
 FROM nginx:stable-alpine
 
-COPY ./default.conf /etc/nginx/conf.d/default.conf
+COPY https://github.com/longwuyuan/ingress-default-backend/blob/89d517543f0f7a47e364994a84659f58f84225c4/images/server/default.conf /etc/nginx/conf.d/default.conf
